--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,14 @@
     <app-shopping-edit></app-shopping-edit>
     <hr>
     <ul class="list-group">
-			<a class="list-group-item" style="cursor: pointer">ingredient</a>
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+      sadas
+          {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
 		</ul>
   </div>
 </div>
