--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="navbar-collapse">
       <ul class="nav navbar-nav mr-auto">
-        <li class="nav-link"><a href="#">Recipes</a></li>
-        <li class="nav-link"><a href="#">Shopping List</a></li>
+        <li class="nav-link" (click)="onSectionSelect($event)"><a href="#">Recipes</a></li>
+        <li class="nav-link" (click)="onSectionSelect($event)"><a href="#">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
