--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,18 +5,11 @@
 </div>
 <hr>
 <div class="row">
-  <div class="col-12 col">
-    <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-      <div class="float-left">
-        <!-- string interpolation -->
-        <h4 class="list-group-item border-0 pl-0">{{ recipe.name }}</h4>
-        <p class="list-group-horizontal">{{ recipe.description }}</p>
-      </div>
-      <span class="float-right">
-        <!-- property binding -->
-        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-fluid" style="max-height: 50px;">
-      </span>
-    </a>
-    <app-recipe-item></app-recipe-item>
+  <div class="col-12">
+    <app-recipe-item 
+      *ngFor="let recipeEl of recipes"
+      [recipeItem]="recipeEl"
+      (recipeSelected)="onRecipeSelected(recipeEl)"
+    ></app-recipe-item>
   </div>
 </div>
