--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-10">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit 
+      (newIngredientAdded)="onNewIngredientAdded($event)"
+    ></app-shopping-edit>
     <hr>
     <ul class="list-group">
       <a
@@ -8,8 +10,7 @@
         style="cursor: pointer"
         *ngFor="let ingredient of ingredients"
       >
-      sadas
-          {{ ingredient.name }} ({{ ingredient.amount }})
+        {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
 		</ul>
   </div>
