--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header (sectionSelected)="onSectionSelected($event)"></app-header>
+<app-header (sectionSelected)="onNavigate($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="selectedSection==='Recipes'"></app-recipes>
-      <app-shopping-list *ngIf="selectedSection==='Shopping List'"></app-shopping-list>
+      <app-recipes *ngIf="selectedSection === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf="selectedSection === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 
