--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
     <div class="navbar-collapse">
       <ul class="nav navbar-nav mr-auto">
-        <li class="nav-link" (click)="onSectionSelect($event)"><a href="#">Recipes</a></li>
-        <li class="nav-link" (click)="onSectionSelect($event)"><a href="#">Shopping List</a></li>
+        <li class="nav-link" ><a href="#" (click)="onSectionSelect('recipe')">Recipes</a></li>
+        <li class="nav-link" ><a href="#" (click)="onSectionSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
