--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,26 @@
       <div class="row">
         <div class="col-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+          <input 
+            type="text" 
+            id="name" 
+            class="form-control"
+            #nameInput
+          >
         </div>
         <div class="col-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <input 
+            type="number" 
+            id="amount" 
+            class="form-control"
+            #amountInput
+          >
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-success mr-1" type="submit">Add</button>
+          <button class="btn btn-success mr-1"  (click)="onAddIngredient()">Add</button>
           <button class="btn btn-danger mr-1" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
